    distance turned out to be subpar in a more detailed empirical analysis,
    especially for smaller smoothing factors.  Note that in the previous
    versions of the package, this merely used to an experimental feature;
    Hence, `detect_noise` in `genie.default` and `skip_leaves` elsewhere
    is no longer available.

*   [NEW FEATURE]  The Genie algorithm was updated so that now arbitrary
    nodes can be skipped from the clustering process.  This allows for
    ignoring points marked as outliers at the data preprocessing stage.

*   ??? #92 NPA, NCA...

*   ???? TODO `preprocess`

*   ???? TODO [BACKWARD INCOMPATIBILITY]  `postprocess` can now be one of
    `"midliers"`, `"none"`, and `"all"`.
    New outlier detection....

*   [Python] [BUGFIX] Modifying `quitefastmst_params` via `set_state`
    now invalidates the cached MST.

*   [Python] [NEW FEATURE]  `plots.plot_scatter` has new arguments:
    `markers` and `colours`.  The module globals `mrk` and `col` were
    renamed accordingly.


## 1.2.0 (2025-07-24)

*   [Python and R] Using the new implementation of Euclidean and mutual
    reachability minimum spanning trees (quite fast in low dimensional spaces)
    from the [`quitefastmst`](https://quitefastmst.gagolewski.com/) package.

*   [BACKWARD INCOMPATIBILITY] `mlpack` is not used anymore.

*   [BACKWARD INCOMPATIBILITY] [Python] Seeking approximate near-neighbours
    with `nmslib` is no longer supported directly; unfortunately, the package
    has not been updated for a while.

*   [Python] `MSTClusterMixin`: A base class for Genie, GIc, and other MST-based
    clustering algorithms.  [later moved to `deadwood`]

*   [BACKWARD INCOMPATIBILITY] [Python] `Genie` and `GIc`: `affinity` was
    renamed `metric`.


## 1.1.6 (2024-08-22)

*   [Python] The package now works with `numpy` 2.0.


## 1.1.5 (2023-10-18)

*   [BACKWARD INCOMPATIBILITY] Inequality measures are no longer referred
    to as inequity measures.
