@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.9', '3.13']
+        python-version: python-version: ['3.10', '3.14']
 
     env:
         R_LIBS_SITE: /usr/lib/R/site-library
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -34,7 +34,7 @@ jobs:
         source python-venv/bin/activate
         python3 -m pip install --upgrade pip
         if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt --upgrade; fi
-        python3 -m pip install wheel rpy2 pytest --upgrade
+        python3 -m pip install wheel scikit-learn rpy2 pandas scipy pytest --upgrade
     - name: Install and Test Python package
       run: |
         source python-venv/bin/activate
