@@ -2,7 +2,7 @@ Package: genieclust
 Type: Package
 Title: Fast and Robust Hierarchical Clustering with Outlier Detection
 Version: 1.2.0.9004
-Date: 2026-01-19
+Date: 2026-01-20
 Authors@R: c(
     person("Marek", "Gagolewski",
         role = c("aut", "cre", "cph"),
